# Project_mAIstro

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CONDUCTOR-BUILD.md  CONDUCTOR-ROADMAP.md  Dockerfile  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  README.md  RENUMBERED.md  appcast.xml  docker-compose.yml  docker-setup.sh  fly.private.toml  fly.toml  maistro.mjs  maistro.podman.env  package.json  render.yaml  setup-podman.sh  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
conductor/: .coverage  .env.example  .gitignore  Dockerfile  backup.sh  cron-review.sh  detect-hardware.sh  docker-compose.yml  launch-conductor.sh  models  pyproject.toml  requirements.txt  setup.sh  start-inference.sh  sync-prompts.sh  test-deployment.sh
conductor/data/: changelog.jsonl
conductor/docs/skills/: chaos_skill.md
conductor/gateway/: config.py  langfuse_tracer.py  prefix_cache.py  server.py  slot_manager.py  ultra_think.py
conductor/gateway/providers/: __init__.py  anthropic.py  base.py  (+3 more)
conductor/orchestrator/: _gateway_auth.py  coder.py  conductor.py  config.py  heartbeat.py  planner.py  progress.py  reviewer.py  tenant.py
conductor/tests/: conftest.py  test_agent_framework.py  test_agent_logic.py  test_conductor.py  test_gateway_extended.py  test_gateway_server.py  test_infra_interfaces.py  test_memory.py  test_orchestrator_core.py  test_prefix_cache.py  test_providers.py  test_real_services.py  test_security_fixes.py  test_skills_interfaces_training.py  test_slot_manager.py  test_tools_subsystem.py  test_ultra_think.py
(+2553 files in other folders)
